--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "constants-browserify": "^1.0.0",
     "dayjs": "^1.11.6",
     "ethers": "^5.7.2",
+    "manthemes": "^1.2.3-alpha.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
