--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.6.4",
     "typescript": "^4.4.2",
     "wagmi": "^0.7.8",
     "warp-contracts": "^1.2.13",
